feat(TokenPairsService): must respond to calls requesting tokenA or tokenB
Implementation finished. Unit tests not finished.
