# src/app/models/index.ts
@@ -4,4 +4,6 @@ export { Order } from "./order";
 export { SignedOrder } from "./signedOrder";
 export { Ticker } from "./ticker";
 export { Token } from "./token";
+export { TokenPairTradeInfo } from "./tokenPairTradeInfo";
 export { TokenPool } from "./tokenPool";
+export { TokenTradeInfo } from "./tokenTradeInfo";
