# src/app/models/tokenPairTradeInfo.ts
@@ -1,0 +1,6 @@
+import { TokenTradeInfo } from "./tokenTradeInfo";
+
+export interface TokenPairTradeInfo {
+    tokenA: TokenTradeInfo;
+    tokenB: TokenTradeInfo;
+}
