# src/app/models/tokenPool.ts
@@ -1,7 +1,10 @@
-import * as BigNumber from "bignumber.js";
+import { BigNumber } from "bignumber.js";
 import { Token } from "./token";
 
 export interface TokenPool {
     token: Token;
-    availableAmount: BigNumber.BigNumber;
+    availableAmount: BigNumber;
+    maximumAmount: BigNumber;
+    minimumAmount: BigNumber;
+    precision: number;
 }
